feat: expose secrets to help testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:postgres}
+      POSTGRES_DB: ${POSTGRES_DB:forte_assets}
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${POSTGRES_PORT:5432}:5432"
     volumes:
       - forte_db:/var/lib/postgresql/data
 
